kubegrade-agent.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubegrade
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubegrade-scanner
  namespace: kubegrade
  labels:
    app: kubegrade-scanner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubegrade-scanner
  template:
    metadata:
      labels:
        app: kubegrade-scanner
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: kubegrade-scanner
        image: public.ecr.aws/kubegrade/scanner:v0.14.0
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: kubegrade-storage
          mountPath: /kubegrade
      volumes:
      - name: kubegrade-storage
        emptyDir: {}
