pod-restart.yaml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-fail-demo
spec:
  containers:
  - name: app
    image: nginx
    livenessProbe:
      httpGet:
        path: /healthz
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 5
